fixed text alignment issue in IE 6 for status messages
git-svn-id: file:///home/jmullan/src/gallery-git/repo/trunk/gallery2@12844 57fcd75e-5312-0410-8df3-f5eb6fbb1595

--- a/install/styles/style.css
+++ b/install/styles/style.css
@@ -195,18 +195,16 @@ td#navbar td, #helpbar td {
 
 div.error, div.warning, div.success {
   color: #000;
+  margin: 0 0 5px 0;
   padding: 5px 10px 5px 45px;
   border: 1px solid #999;
-  min-height: 42px;
-  vertical-align: middle;
 }
-div.error   { background: #fcc url('../../install/images/ico_error.gif') 5px 50% no-repeat; }
-div.warning { background: #ffc url('../../install/images/ico_warning.gif') 5px 50% no-repeat; }
-div.success { background: #cfc url('../../install/images/ico_success.gif') 5px 50% no-repeat; }
+div.error   { background: #fcc url('../../install/images/ico_error.gif') 3px 50% no-repeat; }
+div.warning { background: #ffc url('../../install/images/ico_warning.gif') 3px 50% no-repeat; }
+div.success { background: #cfc url('../../install/images/ico_success.gif') 3px 50% no-repeat; }
 
 div.success h1, div.error h2, div.warning h2 {
     position: relative;
-    top: 10px;
     padding: 0;
 }
 
